# teacher_3d

./: .gitignore  README.md  paper_line_2026-04-07_certaintyband.md  pyproject.toml  setup.py
configs/: paper_re10k_vggt_baseline_full.yaml  paper_re10k_vggt_certaintyband_dinov3_convnext_base.yaml  paper_re10k_vggt_certaintyband_final.yaml  v1_dummy.yaml  v1_re10k_local.yaml  v1_re10k_mono_visible_hidden_local.yaml  v1_re10k_mono_visible_local.yaml  v1_re10k_naive_kd_local.yaml  v1_re10k_teacher_template.yaml  v1_re10k_vggt_balanced_local.yaml  v1_re10k_vggt_balanced_ranked03_hn01_local.yaml  v1_re10k_vggt_balanced_ranked03_hn01_midlocal.yaml  v1_re10k_vggt_balanced_ranked03_hn01_midlocal_precompute.yaml  v1_re10k_vggt_balanced_ranked03_hn02_local.yaml  v1_re10k_vggt_balanced_ranked03_largelocal.yaml  v1_re10k_vggt_balanced_ranked03_largelocal_precompute.yaml  v1_re10k_vggt_balanced_ranked03_local.yaml  v1_re10k_vggt_balanced_ranked03_midlocal.yaml  v1_re10k_vggt_balanced_ranked_local.yaml  v1_re10k_vggt_confbias_confmargin_largelocal.yaml  v1_re10k_vggt_confbias_confmargin_midlocal.yaml  v1_re10k_vggt_confmargin_hn01_largelocal.yaml  v1_re10k_vggt_confmargin_hn01_largelocal_calibrated.yaml  v1_re10k_vggt_confmargin_hn01_midlocal.yaml  v1_re10k_vggt_confmargin_largelocal.yaml  v1_re10k_vggt_confmargin_largelocal_calibrated.yaml  v1_re10k_vggt_confmargin_midlocal.yaml  v1_re10k_vggt_decoupledalpha_confmargin_certaintyband_largelocal.yaml  v1_re10k_vggt_decoupledalpha_confmargin_certaintyband_localplus_boundary35_largelocal.yaml  (+45 more)
scripts/: aggregate_seed_sweeps.py  eval.py  (+13 more)
(+18 files in other folders)
